<resources>
    <string name="app_name">PreciousMoments</string>
    <string name="TvNoItems">No Item Found</string>
    <string name="lblCategory">Category</string>
    <string name="lblTitle">Title</string>
    <string name="lblContact">Contact</string>
    <string name="lblNumber">Telephone Number</string>
    <string name="lblLocation">Address/Location</string>
    <string name="lblDate">Date</string>
    <string name="lblTime">Time</string>
    <string name="lblReminder">Reminder for the RDV</string>
    <string name="lblComments">Comment</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string-array name="spinner">
        <item>Medical</item>
        <item>Meeting</item>
        <item>Personal</item>
        <item>Sport</item>
    </string-array>
    <string-array name="reminder">
        <item>1 day before</item>
        <item>2 days before</item>
        <item>1 week before</item>
    </string-array>
</resources>